Fix: sidebar can open and overflow behavior updated

--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -3,7 +3,9 @@
 	left: 0;
 	width: 616px;
 	height: 100%;
-	overflow: scroll;
+
+	// overflow: scroll;
+	overflow: auto;
 	transform: translate(-616px);
 	transition: transform 0.5s ease;
 }
